scheduler:ticket: fixed appointment board not showing bug in firefox

--- a/app/core/layers.less
+++ b/app/core/layers.less
@@ -18,7 +18,8 @@
     vertical-align: middle;
 
     .layer {
-      margin: 5px auto;
+      margin: auto;
+      padding: 20px;
       .transition(width 0.25s, height 0.25s;);
 
       position: relative;
@@ -35,6 +36,17 @@
         color: #FFF;
       }
 
+
+      cursor: move;
+      cursor: -webkit-grab;
+      &.dragging {
+        cursor: move;
+      }
+      // reset cursor for all immediate children
+      > * {
+        cursor: initial;
+      }
+
       // > .header {
       //   .user-select(none);
       //   background: rgba(0,0,0,0.15);
@@ -49,18 +61,6 @@
       //   }
       // }
       > .content {
-        // padding: 5px 20px 20px 20px;
-        padding: 20px;
-
-        cursor: move;
-        cursor: -webkit-grab;
-        &.dragging {
-          cursor: move;
-        }
-        // reset cursor for all immediate children
-        > * {
-          cursor: initial;
-        }
 
         .actions ul,
         ul.actions {
